@@ -87,7 +87,7 @@ public final class SeparatePoolInetNameResolver extends InetNameResolver {
   protected void doResolve(final String inetHost, final Promise<InetAddress> promise) {
     List<InetAddress> addresses = cache.getIfPresent(inetHost);
     if (addresses != null) {
-      promise.trySuccess(addresses.get(0));
+      promise.trySuccess(addresses.getFirst());
       return;
     }
 
